# agency

./: .dockerignore  Cargo.toml  Dockerfile.openclaw-gateway  README.md  build.rs
.github/workflows/: cla.yml  cloudflare-gateway-container.yml
crates/pai-core/src/: classifier.rs  swarm.rs
docker/: omx-paperclip-runner.mjs  start-openclaw-gateway.sh
docs/: digitalocean-dev-environment.md  foundation-model.md  nanoclaw-rs-migration.md
src/: lib.rs
src/agent/: react.rs
src/foundation/: assurance.rs  boundary.rs  context.rs  domain.rs  events.rs  gate.rs  mod.rs  objective.rs  planning.rs  ports.rs  provenance.rs  queue.rs  refresh.rs  roles.rs  routing.rs  scheduler.rs  scope.rs  service.rs  session.rs  signature.rs
src/memory/: compactor.rs  manager.rs
src/nanoclaw/: app.rs  cli.rs  config.rs  db.rs  dev_environment.rs  executor.rs  fpf_bridge.rs  github_webhook.rs  host_os_control.rs  ingress_policy.rs  linear.rs  local_channel.rs  mod.rs  model_router.rs  observability.rs  omx.rs  openclaw_gateway.rs  pm.rs  pm_automation.rs  project_environments.rs  queue.rs  remote_control.rs  request_plane.rs  router.rs  runtime.rs  scheduler.rs  security_profile.rs  sender_allowlist.rs  service_slack.rs  slack.rs  slack_runtime.rs  slack_threading.rs  swarm.rs  types.rs  webhook_server.rs
src/orchestrator/: pai.rs  router.rs  supervisor.rs
src/safety/: assurance.rs  content_filter.rs
src/services/: responses.rs  speaker.rs
src/tools/: code_exec.rs  codebase.rs  mod.rs
src/utils/: toon.rs
