[package]
name = "rust_agency"
version = "0.2.0"
edition = "2021"
default-run = "nanoclaw"

[features]
default = []
legacy-agency = []

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
croner = "3.0.1"
hmac = "0.12.1"
libc = "0.2"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
tiny_http = "0.12.0"
tungstenite = { version = "0.24.0", default-features = false, features = ["handshake", "rustls-tls-native-roots"] }
url = "2.5.7"
uuid = { version = "1.8", features = ["v4"] }

[dev-dependencies]
tempfile = "3.23.0"
